# HPGVis

./: CMakeLists.txt  README.md  index.html  jet_slope.hp  params.json  super_config.json  supernova_nocut.hp
blog/: index.html
blog/assets/css/: my.css
blog/assets/highlight/: highlight.pack.js
blog/contents/videos/: jet_after_ldav.webm  jet_oblique_video.ogv  jet_oblique_video.webm
demo/: CMakeLists.txt  main.cpp  par.sh  supernova_600.hp
hpgv/: CMakeLists.txt  hpgv.h  hpgv_block.c  hpgv_block.h  hpgv_composite.c  hpgv_composite.h  hpgv_gl.c  hpgv_gl.h  hpgv_render.cpp  hpgv_render.h  hpgv_socket.c  hpgv_tf.c  hpgv_tf.h  hpgv_util.c  hpgv_utilmath.c
hpgv/h5ren/: CMakeLists.txt  h5renpar.sh  main.cpp
hpgv/oo/: hpgvis.cpp  hpgvis.h  image.cpp  image.h  imageraf.cpp  imageraf.h  imagergba.cpp  imagergba.h  parameter.cpp  parameter.h  volume.h
io/: h5reader.cpp  h5reader.h
paper/: template.bib  template.tex
test/: CMakeLists.txt
test/hpgv/: CMakeLists.txt
test/hpgv/h5ren/: CMakeLists.txt  jet_slope.json  super_config.json
test/hpgv/oo/: CMakeLists.txt  hpgv_render_1408_1080_1100_FLOAT_1024_1024.cfg  test_oo_parameter.cpp
viewer/: CMakeLists.txt  TF.cpp  TF.h  TFEditor.cpp  TFEditor.h  animate.json  featuretracker.cpp  featuretracker.h  imagecache.cpp  imagecache.h  keyframe.cpp  keyframe.h  lightctrl.cpp  lightctrl.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  markslider.cpp  markslider.h  res.qrc  utils.h  viewer.cpp  viewer.h
viewer/shaders/: aware.frag  aware.vert  iso.frag  isoraf.frag  new.frag  normal.frag  normal.vert  raf.frag
